// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducer() @@init 1`] = `
"Snapshot Diff:
- First value
+ Second value

- Object {}
+ Object {
+   \\"current\\": 0,
+   \\"isOverLimit\\": false,
+   \\"limit\\": 5000,
+   \\"limitPerPage\\": 100,
+ }"
`;

exports[`reducer() ADMIN-PC/MODULES/WORKING_TYPE/UI/PAGING/INITIALIZE 1`] = `
"Snapshot Diff:
- First value
+ Second value

  Object {
-   \\"current\\": 0,
+   \\"current\\": 100,
    \\"isOverLimit\\": false,
    \\"limit\\": 5000,
    \\"limitPerPage\\": 100,
  }"
`;

exports[`reducer() ADMIN-PC/MODULES/WORKING_TYPE/UI/PAGING/RESET 1`] = `
"Snapshot Diff:
- First value
+ Second value

  Object {
-   \\"current\\": 100,
+   \\"current\\": 0,
    \\"isOverLimit\\": false,
    \\"limit\\": 5000,
    \\"limitPerPage\\": 100,
  }"
`;

exports[`reducer() ADMIN-PC/MODULES/WORKING_TYPE/UI/PAGING/SET_CURRRENT 1`] = `
"Snapshot Diff:
- First value
+ Second value

  Object {
-   \\"current\\": 0,
+   \\"current\\": 3,
    \\"isOverLimit\\": false,
    \\"limit\\": 5000,
    \\"limitPerPage\\": 100,
  }"
`;
